--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run docs`.
     -->
-    <title>React App</title>
+    <title>Hyperf | 基于 Swoole 的高性能企业级协程框架，专注于微服务生态的建设</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
