--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Hyperf | 基于 Swoole 的高性能企业级协程框架，专注于 PHP 微服务生态的建设</title>
+    <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? "https://" : "http://");document.write(unescape("%3Cspan style='display:none;' id='cnzz_stat_icon_1277727797'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s96.cnzz.com/z_stat.php%3Fid%3D1277727797' type='text/javascript'%3E%3C/script%3E"));</script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
