--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,14 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Hyperf | 基于 Swoole 的高性能企业级协程框架，专注于 PHP 微服务生态的建设</title>
+    <meta name="keywords" content="Hyperf,Swoole,Microservice,微服务,PHP,Swoole框架,PHP框架,框架,协程框架,Swoole协程,RPC,服务治理">
+    <meta name="description" content="A coroutine framework that focuses on hyperspeed and flexibility. Building microservice or middleware with ease. Hyperf 是基于 Swoole 4.4 的高性能企业级协程框架，专注于 PHP 微服务生态的建设。">
     <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? "https://" : "http://");document.write(unescape("%3Cspan style='display:none;' id='cnzz_stat_icon_1277727797'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s96.cnzz.com/z_stat.php%3Fid%3D1277727797' type='text/javascript'%3E%3C/script%3E"));</script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <h1>Hy</h1>
+    </div>
   </body>
 </html>
